--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Cofflyz" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.Cofflyz" parent="Theme.MaterialComponents.DayNight">
         <!-- Primary brand color. -->
         <item name="colorPrimary">#24543D</item>
         <item name="colorPrimaryVariant">#24543D</item>
